# gbpassos.github.io

./: .gitignore  .gitpod.yml  0faef5f91f1670430d89b9e33ca4bf39c1ac0977-a1ea6049a519d765c807.js  0faef5f91f1670430d89b9e33ca4bf39c1ac0977-a1ea6049a519d765c807.js.map  28251f7b66618f0c76dd05e59f6f85812bedd59b-ca5aa845fb12e60b45b9.js  28251f7b66618f0c76dd05e59f6f85812bedd59b-ca5aa845fb12e60b45b9.js.map  404.html  Cargo.toml  Makefile  README.md  app-398bb17fee5ce25b74cd.js  app-398bb17fee5ce25b74cd.js.map  app-49f06b2793370b6e0444.js  app-49f06b2793370b6e0444.js.map  app-c11095ce5d6313b99cc8.js  app-c11095ce5d6313b99cc8.js.map  app-cd6cf83a0ea71881a468.js  aws-secret.js  aws-secret.sh  build.rs  chunk-map.json  component---src-pages-agradecimento-js-151061a2055fb2d124fd.js  component---src-pages-agradecimento-js-151061a2055fb2d124fd.js.map  component---src-pages-artigos-index-js-f873d27316ade859a156.js  component---src-pages-artigos-index-js-f873d27316ade859a156.js.map  component---src-pages-artigos-mdx-slug-js-e54811c5261e55aae2a6.js.map  component---src-pages-contato-js-e87c8fd7f489f777ac8b.js  component---src-pages-contato-js-e87c8fd7f489f777ac8b.js.map  component---src-pages-index-js-07604f514af624ab8d34.js  component---src-pages-index-js-07604f514af624ab8d34.js.map  component---src-pages-index-js-4a30ef4bb8e92c255299.js  component---src-pages-index-js-4a30ef4bb8e92c255299.js.map  component---src-pages-index-js-6952c4405275cdfbc1b3.js.map  component---src-templates-project-js-75604b38822a8c49852b.js  component---src-templates-project-js-75604b38822a8c49852b.js.map  (+20 more)
(+169 files in other folders)
