[package]
name = "gbpassosyew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
stylist = { version="0.10.1", features = ["yew", "yew_use_style", "yew_integration"] }
gloo = "0.8.0"
web-sys = "0.3.58"
wasm-bindgen = "0.2.81"

[build-dependencies]
image = "0.24.2"
